--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+
 *, ::before, ::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #001a1a;
+	color: #e3e3e3;
+	font-family: sans-serif;
+}
+
 .top-container {
 	max-height: 50vh;
 	overflow: auto;
 	padding: 1em;
+	margin: 0 auto;
+	max-width: 1080px;
+}
+
+h1 {
+	text-align: center;
+	font-family: 'Bungee Shade', sans-serif;
+	font-size: 3rem;
+	margin-bottom: 1.5em;
+	text-shadow: 3px 3px 10px #00fbff;
+}
+
+@media screen and (min-width: 680) {
+	h1 {
+		font-size: 5rem;
+	}
+		
+}
+
+.top-container > p {
+	font-size: 2rem;
+	margin-bottom: 1em;
+	font-family: 'Russo One', cursive;
+	text-align: center;
+}
+
+@keyframes glow-text {
+	0%, 100% {
+		text-shadow: var(--shadow-x) var(--shadow-y) var(--shadow-blur) var(--shadow-color);
+	}
+	50% {
+		text-shadow: var(--shadow-x) var(--shadow-y) var(--shadow-blur) #0000;
+	}
+  }
+
+.top-container > p:last-child {
+	--shadow-x: 0;
+	--shadow-y: 0;
+	--shadow-blur: .5em;
+	--shadow-color: #00fbff;
+	animation-name: glow-text;
+	animation-duration: 3s;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in-out;
 }
 
 #canvas-container {
@@ -26,12 +79,80 @@
 	display: block;
 	width: 100%;
 	height: 100%;
-	background-color: green;
+	background-color: #000;
 }
 
 .controls > button#toggle-expand {
 	position: absolute;
 	display: block;
-	top: 0;
-	left: 0;
+	top: 1rem;
+	left: 1rem;
+	cursor: pointer;
+	border: none;
+	border-radius: .5em;
+	border-top-left-radius: initial;
+	background-color: #fff;
+	transition: background-color .4s ease-in-out;
+}
+
+.controls > button#toggle-expand:hover {
+	background-color: #12edf0;
+}
+
+@keyframes glow-box {
+	0%, 100% {
+		box-shadow: var(--shadow-x) var(--shadow-y) var(--shadow-blur) var(--shadow-color);
+	}
+	50% {
+		box-shadow: var(--shadow-x) var(--shadow-y) var(--shadow-blur) #0000;
+	}
+  }
+
+button#toggle-expand {
+	--shadow-x: .2em;
+	--shadow-y: .2em;
+	--shadow-blur: .5em;
+	--shadow-color: #00fbff;
+	display: flex;
+	padding: .5em 1em;
+	flex-direction: column;
+	animation-name: glow-box;
+	animation-duration: 1s;
+	animation-iteration-count: 3;
+	animation-timing-function: ease-in-out;
+	box-shadow: var(--shadow-x) var(--shadow-y) var(--shadow-blur) var(--shadow-color);
+}
+
+button#toggle-expand::before {
+	position: relative;
+	content: "";
+	border-top: 2px solid #000;
+	border-left: 2px solid #000;
+	border-radius: 3px;
+	display: block;
+	height: 10px;
+	width: 10px;
+	transform: rotate(45deg);
+	transition: transform .5s ease-in-out;
+}
+
+button#toggle-expand::after {
+	position: relative;
+	content: "";
+	border-bottom: 2px solid #000;
+	border-right: 2px solid #000;
+	border-radius: 3px;
+	display: block;
+	height: 10px;
+	width: 10px;
+	transform: rotate(45deg);
+	transition: transform .5s ease-in-out;
+}
+
+button#toggle-expand.shrink::before {
+	transform: rotate(-135deg);
+}
+
+button#toggle-expand.shrink::after {
+	transform: rotate(-135deg);
 }
