--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 *, ::before, ::after {
 	margin: 0;
@@ -7,11 +8,14 @@
 	box-sizing: border-box;
 }
 
-/* I am thinking of adding some texture for the backround to not look boring */
+:root {
+	--color: #e3e3e3;
+}
+
 body {
-	color: #e3e3e3;
+	color: var(--color);
 	font-family: sans-serif;
-	background: #001a1a url('assets/stars_pattern.png') repeat;
+	background: url('assets/stars_pattern.png') repeat, linear-gradient(90deg, #000, #12edf042), #000;
 }
 
 .top-container {
@@ -33,8 +37,7 @@ h1 {
 @media screen and (min-width: 680) {
 	h1 {
 		font-size: 5rem;
-	}
-		
+	}	
 }
 
 .top-container > p {
@@ -71,8 +74,84 @@ h1 {
 	height: 50vh;
 	max-height: 100vh;
 	width: 100%;
-	background-color: pink; /* <-- change that later to #000 */
+	background-color: #000;
 	transition: height 1s ease-in-out;
+	z-index: 0;
+}
+
+#modal {
+	color: var(--color);
+	background-color: #000;
+	width: 100%;
+	max-width: 300px;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	border-radius: .5em;
+	border-top-right-radius: initial;
+	z-index: 1;
+	opacity: 0;
+	transition: opacity .5s ease-in-out;
+	visibility: hidden;
+	font-family: 'Russo One', cursive;
+}
+
+#modal.active {
+	opacity: 1;
+	visibility: visible;
+}
+
+#modal .title {
+	text-align: center;
+	margin-bottom: .8em;
+	text-shadow: 0 0 5px #00fbff;
+}
+
+#modal > img {
+	display: block;
+	width: 100%;
+	height: 200px;
+	border-top-left-radius: inherit;
+	object-fit: cover;
+}
+
+#modal .description-field {
+	margin: .5rem auto;
+	font-size: .85rem;
+}
+
+#modal p b {
+	color: #12edf0c4;
+}
+
+#modal > #close-btn {
+	display: block;
+	width: 100%;
+	font-size: 1rem;
+	padding: .5em .6em;
+	border: none;
+	border-radius: 4px;
+	border-top-right-radius: 0;
+	bottom: 0;
+	cursor: pointer;
+	box-shadow: inset 0 0 1px #00fbff;
+	font: inherit;
+	color: var(--color);
+	background-color: #000;
+	transition: background-color .2s ease-in-out;
+	transition: box-shadow .2s ease-in-out;
+}
+
+#modal > #close-btn:hover {
+	box-shadow: inset 0 0 42px #00fbff;
+}
+
+#modal > #modal-body {
+	overflow: auto;
+	padding: 1em;
+	max-height: 200px;
+	box-shadow: inset 0 0 1px #00fbff;
+	border-radius: inherit;
 }
 
 #canvas-container > canvas {
@@ -92,7 +171,7 @@ h1 {
 	border: none;
 	border-radius: .5em;
 	border-top-left-radius: initial;
-	background-color: #fff;
+	background-color: var(--color);
 	transition: background-color .4s ease-in-out;
 }
 
@@ -156,4 +235,16 @@ button#toggle-expand.shrink::before {
 
 button#toggle-expand.shrink::after {
 	transform: rotate(-135deg);
+}
+
+.slider-fg {
+	background-color: #0edee1 !important;
+}
+
+.c input[type="text"] {
+	color: #0edee1 !important;
+}
+
+.dg .cr.number {
+	border-left-color: #0edee1 !important;
 }
